=======
HISTORY
=======

1.3 (unreleased)
------------------

- Use TinyMCE compressor to provide editor and plugins
  [tom_gross]

- Fixed http://dev.plone.org/plone/ticket/11681
  [tom_gross]

1.2.9 (unreleased)
------------------

- Search does not work with Virtual Hosting (close #10308)
  [keul] [mamico]

1.2.8 (2011-09-19)
------------------

- Support RichTextValues from plone.app.textfield when determining the mimetype
  of the field being edited.
  [davisagli]


1.2.7 (2011-07-05)
------------------

- Do not give a TypeError 'Could not adapt' when trying to adapt a
  context that is not adaptable to IJSONFolderListing and friends.
  Instead return nothing in the ajax call.
  [maurits]

- pep8
  [iElectric]

- Ported tests from doctests to unittests
  [iElectric]

- Add hook to JSONDetails to allow subclasses to supplement or override the results
  [anthonygerrard]

1.2.6 (2011-05-12)
------------------
- Changed the color of the background on the external editor to light gray to make the buttons more visible.
  [davidjonas]


1.2.5 (2011-05-12)
------------------

- Add a CSS class to the `Edit without visual editor` note.
  [hannosch]

- Avoid determining content type as text/plain on Dexterity add views.
  [davisagli]

- In the link "Edit without visual editor", append existing url-parameters.
  Fixes https://dev.plone.org/plone/ticket/11632
  [WouterVH]


1.2.4 (2011-03-22)
------------------

- Use uuidFor(obj) from plone.outputfilters instead of obj.UID() for
  plone.uuid compatibility.
  [elro]

- Internationalization fixes.
  [thomasdesvenain]

- Allows to use tinymce wysiwyg support outside of an Archetypes context.
  (Checks 'force_wysiwyg' variable value to check if wysiwyg support is enabled.)
  [thomasdesvenain]

- Don't acquire when determining the mimetype of the field being edited.
  [davisagli]

- Fixed bug when rendering for anonymous users.
  [elro]

- Remove isTinyMCEEnabled in kssregistry. Refs #11248
  [jaroel]
